feat: improve menu and ToC layouts - make container elements flexible for smoother responsive transitions - implement mobile menu toggle with JS, keeping scroll position on click - add a toggle button to side menu area with display button for desktop view - implement JS-based ToC expansion on mobile with overlay display

--- a/assets/css/_defaults.scss
+++ b/assets/css/_defaults.scss
@@ -38,6 +38,9 @@ $toc-breakpoint: $menu-width + $body-max-width * 1.1 + $toc-width !default;
 $menu-breakpoint: $menu-width + $body-max-width * 1.3 !default;
 $narrow-breakpoint: ($body-min-width + $body-max-width) / 2;
 
+$toc-overlay-width: 32rem;
+$toc-overlay-height: 80vh;
+
 $preview-width: 200px;
 $preview-height: 170px;
 $preview-mobile-width: 160px;
