--- a/layouts/_partials/head.html
+++ b/layouts/_partials/head.html
@@ -108,6 +108,14 @@ https://github.com/minyeamer/hugo-miny
 {{- $scrollProgressJS := resources.Get "js/scroll-progress.js" | resources.ExecuteAsTemplate "js/scroll-progress.js" . | resources.Minify | resources.Fingerprint }}
 <script defer src="{{ partial `links/resource-precache` $scrollProgressJS }}" {{ template `integrity` $scrollProgressJS }}></script>
 
+<!-- Menu Toggle -->
+{{- $menuToggleJS := resources.Get "js/menu-toggle.js" | resources.ExecuteAsTemplate "js/menu-toggle.js" . | resources.Minify | resources.Fingerprint }}
+<script defer src="{{ partial `links/resource-precache` $menuToggleJS }}" {{ template `integrity` $menuToggleJS }}></script>
+
+<!-- ToC Toggle -->
+{{- $tocToggleJS := resources.Get "js/toc-toggle.js" | resources.ExecuteAsTemplate "js/toc-toggle.js" . | resources.Minify | resources.Fingerprint }}
+<script defer src="{{ partial `links/resource-precache` $tocToggleJS }}" {{ template `integrity` $tocToggleJS }}></script>
+
 <!-- Set color scheme - toggle dark/light theme -->
 {{- $setThemeJS := resources.Get "js/set-theme.js" | resources.ExecuteAsTemplate "js/set-theme.js" . | resources.Minify | resources.Fingerprint }}
 <script defer src="{{ partial `links/resource-precache` $setThemeJS }}" {{ template `integrity` $setThemeJS }}></script>
