--- a/layouts/baseof.html
+++ b/layouts/baseof.html
@@ -11,6 +11,8 @@
 
   <input type="checkbox" class="hidden toggle" id="menu-control" />
   <input type="checkbox" class="hidden toggle" id="toc-control" />
+  <div class="menu-overlay"></div>
+
   <main class="container flex">
     {{ template "menu-container" . }} <!-- Left menu -->
 
