--- a/assets/css/_defaults.scss
+++ b/assets/css/_defaults.scss
@@ -20,6 +20,7 @@ $font-size-20: 1.25rem !default;
 $font-size-24: 1.5rem !default;
 $font-size-32: 2rem !default;
 $font-size-40: 2.5rem !default;
+$font-size-48: 3rem !default;
 
 $border-radius: $padding-4 !default;
 
@@ -32,8 +33,9 @@ $container-max-width: 80rem !default;
 
 $menu-width: 16rem !default;
 $toc-width: 16rem !default;
+$toc-margin-right: 3rem !default;
 
-$wide-breakpoint: $menu-width + $body-wide-width * 1.1 + $toc-width !default;
+$wide-breakpoint: $menu-width + $body-wide-width * 1.1 + $toc-width + $toc-margin-right !default;
 $toc-breakpoint: $menu-width + $body-max-width * 1.1 + $toc-width !default;
 $menu-breakpoint: $menu-width + $body-max-width * 1.3 !default;
 $narrow-breakpoint: ($body-min-width + $body-max-width) / 2;
