--- a/assets/css/_search.scss
+++ b/assets/css/_search.scss
@@ -87,27 +87,28 @@
 
 .list-header {
   text-align: center;
-  padding-bottom: $padding-16;
-  margin-bottom: $padding-48;
+  margin: $padding-24 auto;
   border-bottom: 1px solid var(--body-font-color);
-
-  h1 {
-    font-size: $font-size-40;
-    margin-bottom: $padding-8;
-
-    i {
-      font-size: $font-size-32;
-    }
-  }
-
-  p {
-    font-size: $font-size-20;
-  }
 
   .list-count {
     font-style: normal;
     font-weight: bold;
     color: var(--color-link);
+  }
+}
+
+.markdown .list-header {
+  h1 {
+    font-size: $font-size-40;
+    margin: $padding-16 auto;
+
+    i {
+      font-size: $font-size-40;
+    }
+  }
+
+  p {
+    font-size: $font-size-20;
   }
 }
 
