--- a/layouts/_shortcodes/image.html
+++ b/layouts/_shortcodes/image.html
@@ -10,10 +10,10 @@
 {{- $target := .Get "target" | default "_blank" -}}
 {{- /* --- Parameters: Size --- */ -}}
 {{- $size := slice -}}
-{{- with .Get "width" | default "100%" -}}{{- $size = $size | append (print "width: " .) -}}{{- end -}}
+{{- with .Get "width" -}}{{- $size = $size | append (print "width: " .) -}}{{- end -}}
 {{- with .Get "min-width" -}}{{- $size = $size | append (print "min-width: " .) -}}{{- end -}}
 {{- with .Get "max-width" -}}{{- $size = $size | append (print "max-width: " .) -}}{{- end -}}
-{{- with .Get "height" | default "100%" -}}{{- $size = $size | append (print "height: " .) -}}{{- end -}}
+{{- with .Get "height" -}}{{- $size = $size | append (print "height: " .) -}}{{- end -}}
 {{- with .Get "min-height" -}}{{- $size = $size | append (print "min-height: " .) -}}{{- end -}}
 {{- with .Get "max-height" -}}{{- $size = $size | append (print "max-height: " .) -}}{{- end -}}
 {{- /* --- Render --- */ -}}
