--- a/layouts/baseof.html
+++ b/layouts/baseof.html
@@ -60,7 +60,7 @@
   <header class="content-header">
     {{ partial "content/categories" . }}
     {{ partial "content/title" . }}
-    {{ partial "content/date" . }}
+    {{ partial "content/datetime" . }}
   </header>
 {{ end }}
 
