--- a/assets/css/_layouts.scss
+++ b/assets/css/_layouts.scss
@@ -572,7 +572,7 @@ body[dir="rtl"] .site-menu {
   }
 }
 
-.content-date {
+.content-datetime {
   color: var(--gray-500);
   font-size: $font-size-14;
   font-weight: 400;
