--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "content" }}
-<article class="markdown content-wrap">
+<article class="content-wrap markdown">
   {{ $pages := partialCached "pages/posts" . "posts" }}
 
   <div class="list-header">
