--- a/layouts/search/list.html
+++ b/layouts/search/list.html
@@ -1,5 +1,5 @@
 {{ define "content" }}
-<article class="markdown content-wrap">
+<article class="content-wrap markdown">
   <div class="list-header" id="list-header"></div>
   <div class="taxonomy-section hidden" id="taxonomy-section"></div>
 
