--- a/layouts/baseof.html
+++ b/layouts/baseof.html
@@ -13,7 +13,7 @@
   <input type="checkbox" class="hidden toggle" id="toc-control" />
   <div class="menu-overlay"></div>
 
-  <main class="container flex">
+  <main class="container">
     {{ template "menu-container" . }} <!-- Left menu -->
 
     <div class="main-wrap">
