--- a/layouts/_partials/toolbar.html
+++ b/layouts/_partials/toolbar.html
@@ -1,10 +1,20 @@
-<button class="toolbar-button" onclick="window.scrollTo({top: 0, behavior: 'smooth'})" title="Go to top">
-  <i class="fa fa-chevron-up"></i>
-</button>
+<input type="checkbox" id="toolbar-toggle" class="hidden toggle" />
 
-<button class="toolbar-button" onclick="window.scrollTo({top: document.body.scrollHeight, behavior: 'smooth'})" title="Go to bottom">
-  <i class="fa fa-chevron-down"></i>
+<div class="toolbar-items">
+  <button class="toolbar-button" onclick="window.scrollTo({top: 0, behavior: 'smooth'})" title="Go to top">
+    <i class="fa fa-chevron-up"></i>
+  </button>
 
-<button class="toolbar-button" onclick="history.back()" title="Go back">
-  <i class="fa-solid fa-arrow-left"></i>
-</button>
+  <button class="toolbar-button" onclick="window.scrollTo({top: document.body.scrollHeight, behavior: 'smooth'})" title="Go to bottom">
+    <i class="fa fa-chevron-down"></i>
+  </button>
+
+  <button class="toolbar-button" onclick="history.back()" title="Go back">
+    <i class="fa-solid fa-arrow-left"></i>
+  </button>
+</div>
+
+<label for="toolbar-toggle" class="toolbar-button toolbar-toggle-label">
+  <i class="fa-solid fa-plus icon-expand"></i>
+  <i class="fa-solid fa-xmark icon-collapse"></i>
+</label>
